fix(chart): allow axis tick and focus point to overflow svg container
Prevent clipping of focus point at x-axis

--- a/src/styles/_chart-layout.scss
+++ b/src/styles/_chart-layout.scss
@@ -43,6 +43,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    overflow: visible; // needed for focus-point near x-axis to be displayed
   }
 
   .chart-x-axis-svg {
